add double nickname length

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,4 +16,5 @@
     <string name="key_version">version</string>
     <string name="key_goto_settings">goto_settings</string>
     <string name="key_debug">debug</string>
+    <string name="key_double_nickname_length">double_nickname_length</string>
 </resources>
